-
Bug
-
Resolution: Fixed
-
P3
-
19, 20
-
b16
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/shenandoahHeap.inline.hpp:126), pid=37776, tid=37792
# Error: Shenandoah assert_forwarded failed; Object should be forwarded
Referenced from:
interior location: 0x0000000614a00028
inside Java heap
not in collection set
region: | 4|R |BTE 614a00000, 614c00000, 614c00000|TAMS 614a00000|UWM 614c00000|U 2048K|T 2048K|G 0B|S 0B|L 2048K|CP 0
Object:
0x000000061660bd90 - klass 0x0000000800036a38 jdk.internal.vm.StackChunk
not allocated after mark start
not after update watermark
not marked strong
not marked weak
in collection set
mark: mark(is_neutral no_hash age=0)
region: | 18|CS |BTE 616600000, 616800000, 616800000|TAMS 616800000|UWM 616800000|U 2048K|T 2048K|G 0B|S 0B|L 52624B|CP 0
Forwardee:
(the object itself)
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/zgu/ws/jdk/src/hotspot/share/gc/shenandoah/shenandoahHeap.inline.hpp:126), pid=37776, tid=37792
# Error: Shenandoah assert_forwarded failed; Object should be forwarded
Referenced from:
interior location: 0x0000000614a00028
inside Java heap
not in collection set
region: | 4|R |BTE 614a00000, 614c00000, 614c00000|TAMS 614a00000|UWM 614c00000|U 2048K|T 2048K|G 0B|S 0B|L 2048K|CP 0
Object:
0x000000061660bd90 - klass 0x0000000800036a38 jdk.internal.vm.StackChunk
not allocated after mark start
not after update watermark
not marked strong
not marked weak
in collection set
mark: mark(is_neutral no_hash age=0)
region: | 18|CS |BTE 616600000, 616800000, 616800000|TAMS 616800000|UWM 616800000|U 2048K|T 2048K|G 0B|S 0B|L 52624B|CP 0
Forwardee:
(the object itself)
- is blocked by
-
JDK-8287227 Shenandoah: A couple of virtual thread tests failed with iu mode even without Loom enabled.
-
- Resolved
-
-
JDK-8288139 JavaThread touches oop after GC barrier is detached
-
- Closed
-
- relates to
-
JDK-8290250 Shenandoah: disable Loom for iu mode
-
- Resolved
-
- links to
-
Commit openjdk/jdk/84d7ff64
-
Review openjdk/jdk/9494
-
Review openjdk/jdk/9982
-
Review openjdk/jdk/10089
(2 links to)