8288129: Shenandoah: Skynet test crashed with iu + aggressive